fix notifications to cart button mobile version

--- a/src/components/Header/HeaderButton/HeaderButton.scss
+++ b/src/components/Header/HeaderButton/HeaderButton.scss
@@ -49,5 +49,10 @@
   .button {
     margin-left: 0;
     padding: 20px 40px;
+
+    div {
+      top: 18px;
+      left: 52px;
+    }
   }
 }
